k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traffic-guard-svc
  namespace: default
spec:
  # Używamy ClusterIP, aby ruch z zewnątrz nie miał tu jeszcze dostępu
  type: ClusterIP 
  selector:
    app: traffic-guard
  ports:
    - protocol: TCP
      port: 80          # Port usługi wewnątrz klastra
      targetPort: 8000  # Port, na którym nasłuchuje Twój Python (FastAPI)
