k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traffic-guard-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging" #staging env
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - traffic-guard.westeurope.cloudapp.azure.com
      secretName: traffic-guard-tls-staging #staging secret
  rules:
    - host: traffic-guard.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # Wskazujemy na usługę stworzoną w poprzednim kroku!
                name: traffic-guard-svc
                port:
                  number: 80
